A page of people is one question, and what identifies them is said once
Two things, both consequences of the vault's subject having become the human.

THE READ PATH. A record names the person whose key sealed it, so a page's
people are known before the vault is asked anything — and several records of
one human collapse to one entry. What was three questions a row is one for the
page: who they are now, whether they are restricted, and the key, together.

Measured on two hundred person records, warmed, five rounds, audit off:
fifty-five milliseconds before any of this, seventy-three after the subject
changed and before this, eleven now. The same resource with the membrane off
is four. The middle number is the one worth keeping: making the model correct
made reads slower first, and only measuring at the end would have shipped that
while claiming the opposite.

Absorption is kept flat for the same reason. A survivor is one hop from
whoever they absorbed, because resolving a chain is a walk per row on the path
this exists to keep cheap.

WHAT IDENTIFIES SOMEBODY. It was declared in two vocabularies: a type named
the systems it is identified by, and scim named a namespace no type mentioned,
feeding the same claim. The membrane read one of them, so the directory's
uniqueness disappeared while everything still looked right — a second User
claiming one employee's number was created rather than refused, and lookup by
it answered nothing.

So scim selects rather than declares, and selecting something undeclared is
refused at registration, where a declaration disagreeing with itself can still
be fixed by whoever wrote it. A tenant declaring no Person at all is left
alone: that is a missing type rather than a disagreeing one, and bring-up
already records it as unservable — moving it here would have relocated
somebody else's behaviour under cover of a refactor.

Verified by the PDI suites and by the two full runs the earlier steps passed.
The last full run failed only on the exte